k8s-configs/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templateapp-main-postgres
  namespace: templateapp
  labels:
    app: templateapp-main-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: templateapp-main-postgres
  template:
    metadata:
      labels:
        app: templateapp-main-postgres
    spec:
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume-pvc
      containers:
        - name: templateapp-main-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: '/var/lib/postgresql/data'
              name: postgres-volume

---
apiVersion: v1
kind: Service
metadata:
  name: templateapp-main-postgres-service
  namespace: templateapp
spec:
  type: LoadBalancer
  ports:
    - name: 'templateapp-main-postgres'
      port: 5432
  selector:
    app: templateapp-main-postgres
