k8s-configs/templateapp-postgresql-db.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: templateapp-main-postgres
  labels:
    app: templateapp-main-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: templateapp-main-postgres
  template:
    metadata:
      labels:
        app: templateapp-main-postgres
    spec:
      volumes:
        - name: templateapp-main-postgres-pv-storage
          persistentVolumeClaim:
            claimName: template-app-postgres-pvc
      containers:
      - name: templateapp-main-postgres
        image: postgres:latest
        ports:
          - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
              - mountPath: "/var/lib/postgresql/data"
                name: templateapp-main-postgres-pv-storage

---

apiVersion: v1
kind: Service
metadata:
  name: templateapp-main-postgres-service
spec:
 type: ClusterIP
 ports:
  - name: "templateapp-main-postgres"
    port: 5432
    targetPort: 5432
 selector:
   app: templateapp-main-postgres
