k8s-configs/templateapp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: templateapp-main-api
  namespace: templateapp
  labels:
    app: templateapp-main-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: templateapp-main-api
  template:
    metadata:
      labels:
        app: templateapp-main-api
    spec:
      containers:
        - name: templateapp-main-api
          image: ${DOCKER_IMAGE}
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: templateapp
  name: templateapp-main-api-service
spec:
  ports:
    - port: 80
  selector:
    app: templateapp-main-api

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: templateapp
  name: templateapp-main-api-ingress
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  rules:
    - host: ${VIRTUAL_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: templateapp-main-api-service
                port:
                  name: http
  tls:
    - secretName: templateapp-main-api-tls
      hosts:
        - ${VIRTUAL_HOST}
